# pitch-prediction-app

./: .copier-answers.yml  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.web-lambda  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
apps/web/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json
docs/: README.md  product-intent.md  project-profile.md
docs/adr/: 0001-adopt-agentic-engineering-doctrine.md  0002-adopt-job-aligned-typescript-stack.md  0004-adopt-separate-pitchpredict-model-service.md  0005-refocus-primary-ui-on-next-pitch-prediction.md  0006-remove-password-gate-and-mock-predictions.md  0008-adopt-serverless-web-architecture.md  0009-remove-archived-scenario-api-surface.md  0010-use-warmed-model-lambda-alias.md  0011-adopt-async-timeline-start-jobs.md  README.md
docs/architecture/: stack-profile.md  system-map.md
docs/contracts/: README.md  model-service.md  policy-inputs.md  state-machines.md  telemetry-events.md  tool-registry.md  workflow-events.md
docs/deployment/: custom-domain.md
infra/: cdk.context.json  cdk.json  package.json  tsconfig.json
scripts/: deploy-model-lambda.sh  doctor.sh  verify-product-flows.mjs
services/model-api/: .dockerignore  Dockerfile  Dockerfile.lambda  README.md  pyproject.toml
services/model-api/src/pitch_model_api/: __init__.py  config.py  lambda_handler.py  main.py  models.py  normalizer.py  runtime.py
services/model-api/tests/: test_normalizer.py  test_service_contract.py
(+54 files in other folders)
