[project]
name = "pitch-sequence-model-api"
version = "0.1.0"
description = "Product-shaped inference service for Pitch Sequence Lab."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.121.0",
  "pitchpredict==0.5.0",
  "pydantic>=2.12.0",
  "uvicorn[standard]>=0.38.0"
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.3.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
